--- a/kamp/dp/index.html
+++ b/kamp/dp/index.html
@@ -111,7 +111,16 @@
       </header>
       <section class="mt-6 no-print">
         <h2 class="text-2xl">Dərsin videosu</h2>
-        <p class="my-4">sonra yüklənəcək</p>
+        <iframe
+          class="my-4"
+          width="100%"
+          height="400px"
+          src="https://www.youtube.com/embed/VGbqy1baZgk"
+          title="İnformatika Olimpiadası Hazırlığı üçün Qış Kampı (2023) - Dərs 3"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
       </section>
       <section class="mt-6">
         <header class="flex items-center justify-between">
@@ -173,12 +182,8 @@
           >
           məsələsini həll et.
         </p>
-        <p class="mt-4">
-          Yaddaşı azaltmaq metodu haqqında danış.
-        </p>
-        <p class="mt-4">
-          Cavabı aldığımız yolun özünü tapmaq haqqında danış.
-        </p>
+        <p class="mt-4">Yaddaşı azaltmaq metodu haqqında danış.</p>
+        <p class="mt-4">Cavabı aldığımız yolun özünü tapmaq haqqında danış.</p>
         <p class="mt-4 border p-3 rounded-xl">
           <span class="font-semibold">Özünü yoxla</span>
           <br />
@@ -215,7 +220,8 @@
           <span class="font-semibold">Özünü yoxla</span>
           <br />
           <a href="https://cses.fi/problemset/task/1097" target="_blank"
-            >Silmə oyunu</a>
+            >Silmə oyunu</a
+          >
           məsələsini həll et.
         </p>
         <p class="mt-4 border p-3 rounded-xl">
@@ -234,12 +240,24 @@
           >
           məsələsini həll et.
         </p>
-        
       </section>
       <section class="mt-6">
         <h2 class="text-2xl">Əlavə faydalı resurslar</h2>
         <ul class="mt-2 ml-8 list-disc">
-          <li>əlavə olunacaq</li>
+          <li>
+            <a href="https://cses.fi/book/book.pdf" target="_blank"
+              >CSES Kitabında</a
+            >
+            7-ci (<i>Dynamic Programming)</i>) fəsil.
+          </li>
+          <li>
+            <a href="https://usaco.guide/gold" target="_blank"
+              >USACO Guide Gold</a
+            >
+            səhifəsində <i>Introduction to DP</i>, <i>Knapsack DP</i>,
+            <i>Paths on Grids</i>, <i>Longest Increasing Subsequence</i> və
+            <i>Range DP</i> bölmələri.
+          </li>
         </ul>
       </section>
       <section class="mt-6 no-print" id="homework">
