--- a/kamp/index.html
+++ b/kamp/index.html
@@ -180,7 +180,7 @@
                 <div class="flex flex-col gap-1">
                   <span> Dərs 3: Dinamik proqramlaşdırma</span>
                   <span class="text-base"
-                    >?????/</span
+                    >Cavabı necə cavabdan hesablamalı</span
                   >
                 </div>
                 <div class="ml-auto flex items-center scale-150">
