--- a/kamp/index.html
+++ b/kamp/index.html
@@ -200,6 +200,33 @@
                 </div>
               </article>
             </a>
+            <a href="graph" class="text-inherit no-underline">
+              <article
+                class="border border-neutral-200 rounded-xl px-3 py-2 flex gap-3 hover:bg-neutral-900 hover:cursor-pointer"
+              >
+                <div class="flex flex-col gap-1">
+                  <span> Dərs 4: Qraflar</span>
+                  <span class="text-base"
+                    >Təməl amma çox güclü alqoritmlər</span
+                  >
+                </div>
+                <div class="ml-auto flex items-center scale-150">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-chevron-right"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"
+                    />
+                  </svg>
+                </div>
+              </article>
+            </a>
           </li>
         </ul>
       </section>
