--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
 
           <span class="mt-2 italic">Kursumuzun adresi:</span>
           <span class="pl-8"
-            >H.Cavid prospekti, məhəllə 522 (Elmlər Akademiyası metrosu, Texniki
-            Universitetə yaxın)</span
+            >Zahid Xəlil küçəsi 23, 5-ci mərtəbə (Baku Dövlət Universiteti ilə üzbəüz küçə, Araz Marketin yanı)</span
           >
         </p>
       </section>
