--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -64,7 +64,7 @@
       </p>
     </section>
     <section class="mt-4">
-      <h2 class="text-2xl">Kampın haqqında</h2>
+      <h2 class="text-2xl">Kamp haqqında</h2>
       <p class="mt-2">
         Kamp hamı üçün açıq və tamamilə ödənişsizdir. Nəzərə alın ki,
         dərslər çox intensiv və sürətli proqram ilə keçiləcək, amma bütün
