--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -34,6 +34,7 @@
             kampın mövzularını oxumağınız yaxud yada salmağınız mütləqdir. Bu kamp isə RFO-nun final mərhələsində medala
             iddiaçılar üçün nəzərdə tutulmuşdur. Uğurlar arzu edirik!
           </p>
+          <p>Dərslər saat 18:00-da <a href="#schedule">cədvəldə</a> yazılmış dərs günlərində olacaqdır.</p>
           <p>Dərslər üçün Zoom linki: <a href="https://mit.zoom.us/j/96754793263" target="_blank" rel="noopener noreferrer">https://mit.zoom.us/j/96754793263</a> </p>
         </div>
       </div>
