--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TED Bilik Kursları</title>
+  <title>İnformatika Qış Kampı 2024</title>
   <link rel="stylesheet" href="/dist/styles.css" />
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@0;1&display=swap");
@@ -45,8 +45,9 @@
         Hamıya salam! Bu, kampımızın veb səhifəsidir. Burada dərslərin
         qeydləri, ev tapşırıqları, əlavə resurslar və başqa dəyərli resurslar
         paylaşılacaq. Bu səhifə həm kamp boyu, həm də daha sonra həmişəlik
-        əlçatan olacaq. Əgər səhifədə bir yanlışlıqla qarşılasşanız, Piazza
-        forumunda bu haqda paylaşa bilərsiniz.
+        əlçatan olacaq.
+        Kampın təşkili üçün aşağıdakı bütün müəllimlərə dərin təşəkkürlər düşür.
+        Ümid edirik ki, bu faydalı resursdan istifadə edəcəksiniz.
       </p>
     </section>
     <section class="mt-6">
@@ -58,6 +59,7 @@
         <li>Emin Orucov</li>
         <li>Əziz Hüseynov</li>
         <li>İbrahim Tağızadə</li>
+        <li>Kənan Əsgərov</li>
         <li>Rəşad Məmmədov</li>
         <li>Rəvan Qasımzadə</li>
         <li>Saleh İsayev</li>
@@ -69,12 +71,9 @@
       <p class="mt-2">
         Kamp hamı üçün açıq və tamamilə ödənişsizdir. Nəzərə alın ki,
         dərslər çox intensiv və sürətli proqram ilə keçiləcək, amma bütün
-        dərslərin videoları və onlar üçün etdiyim qeydlər buraya
-        yerləşdiriləcək. Hansısa mövzunu başa düşməsəniz, mütləq Piazza
-        platformasında sual yazın. Kampın müddəti boyunca oradakı bütün
-        suallara cavab yazılacaq. Əgər sizin təcrübəniz daha çoxdursa və ya
-        dərsləri çox yaxşı başa düşürsünüzsa, orada başqalarının suallarını
-        cavablandırmaqdan çəkinməyin.
+        dərslərin videoları və onlar üçün qeydlər buraya
+        yerləşdiriləcək.
+        Hər dərsin ev tapşırıqları olacaq və bu tapşırıqların həlli uyğun dərsdən 1 həftə sonra kod şəklində paylaşılacaq.
       </p>
     </section>
     <section class="mt-4">
@@ -82,6 +81,8 @@
       <p class="mt-2">
         Kamp irəli mövzuları əhatə edir. Müəllimlərin çoxunun təcrübəsinə görə, bu
         mövzuları əla mənimsəmək RFO-nun finalında qızıl medal almaq üçün atılmalı önəmli addımdır.
+        Bütün müəllimlər bütün dərslərin hazırlanmasında kömək edir.
+        Sonda isə Kənan müəllimin köməyi ilə CMS platformasında bütün mövzular üzrə maraton yarışı keçiriləcək.
       </p>
       <div class="overflow-x-auto mt-4">
         <table class="min-w-full bg-slate-300">
@@ -125,7 +126,7 @@
     { label: 'Ev tapşırığı üzərində çalışma günü', date: 'Fevral 6', teacher: '' },
     { label: '9. Spanning Tree (Kruskal, Union-Find)', date: 'Fevral 7, ç.', teacher: 'Saleh İsayev' },
     { label: 'Ev tapşırığı üzərində çalışma günləri', date: 'Fevral 8-9-10', teacher: '' },
-    { label: '10. Maraton Yarışı', date: 'Fevral 11, b.', teacher: '' },
+    { label: '10. Maraton Yarışı', date: 'Fevral 11, b.', teacher: 'Kənan Əsgərov' },
   ];
 
 
