Add maraton hour

--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -126,7 +126,7 @@
     { label: 'Ev tapşırığı üzərində çalışma günü', date: 'Fevral 6', teacher: '' },
     { label: '9. Spanning Tree (Kruskal, Union-Find)', date: 'Fevral 7, ç.', teacher: 'Saleh İsayev' },
     { label: 'Ev tapşırığı üzərində çalışma günləri', date: 'Fevral 8-9-10', teacher: '' },
-    { label: '10. Maraton Yarışı', date: 'Fevral 11, b.', teacher: 'Kənan Əsgərov' },
+    { label: '10. Maraton Yarışı', date: 'Fevral 11, b. (saat 10:00-22:00)', teacher: 'Kənan Əsgərov' },
   ];
 
 
