--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -30,11 +30,11 @@
         </span>
         <div>
           <p>
-            Bu kampın mövzuları <a href="/kamp">Qış Kampı 2023</a>-də keçilən mövzuların davamıdır. Odur ki, ilk olaraq o
-            kampın mövzularını oxumağınız yaxud yada salmağınız mütləqdir. Bu kamp isə RFO-nun final mərhələsində medala
+            Bu kampın mövzuları <a href="/kamp">Qış Kampı 2023</a>-də keçilən dərslərin davamıdır. Odur ki, ilk olaraq o
+            kampın mövzularını oxumağınız, yaxud yada salmağınız mütləqdir. Bu kamp isə RFO-nun final mərhələsində medala
             iddiaçılar üçün nəzərdə tutulmuşdur. Uğurlar arzu edirik!
           </p>
-          <p>Dərslər saat 18:00-da <a href="#schedule">cədvəldə</a> yazılmış dərs günlərində olacaqdır.</p>
+          <p>Dərslər saat 18:00-da <a href="#schedule">cədvəldə</a> yazılmış tarixlərdə olacaqdır.</p>
           <p>Dərslər üçün Zoom linki: <a href="https://mit.zoom.us/j/96754793263" target="_blank" rel="noopener noreferrer">https://mit.zoom.us/j/96754793263</a> </p>
         </div>
       </div>
@@ -43,23 +43,23 @@
       <h2 class="text-2xl">Tanışlıq</h2>
       <p class="mt-2">
         Hamıya salam! Bu, kampımızın veb səhifəsidir. Burada dərslərin
-        qeydləri, ev tapşırıqları, əlavə resurslar və başqa dəyərli resurslar
+        qeydləri, ev tapşırıqları və başqa dəyərli resurslar
         paylaşılacaq. Bu səhifə həm kamp boyu, həm də daha sonra həmişəlik
         əlçatan olacaq.
-        Kampın təşkili üçün aşağıdakı bütün müəllimlərə dərin təşəkkürlər düşür.
-        Ümid edirik ki, bu faydalı resursdan istifadə edəcəksiniz.
+        Kampın təşkili üçün aşağıdakı müəllimlərin hər birinə dərin təşəkkürlər düşür.
+        Ümid edirik ki, bu faydalı resursdan effektiv istifadə edəcəksiniz.
       </p>
     </section>
     <section class="mt-6">
       <h2 class="text-2xl">Müəllimlər</h2>
       <p class="mt-2">
-        Kampın müəllimləri keçmiş medalçılar və məşhur olimpiadaçılardır:
+        Kampın müəllimləri keçmiş medalçılar və tanınmış təlimçilərdir:
       <ul class="list-disc ml-8">
         <li>Abutalıb-Barış Namazov</li>
         <li>Emin Orucov</li>
         <li>Əziz Hüseynov</li>
         <li>İbrahim Tağızadə</li>
-        <li>Kənan Əsgərov</li>
+        <li>Kənan Əsgərli</li>
         <li>Rəşad Məmmədov</li>
         <li>Rəvan Qasımzadə</li>
         <li>Saleh İsayev</li>
@@ -80,9 +80,9 @@
       <h2 class="text-2xl">Nə öyrənəcəksiniz</h2>
       <p class="mt-2">
         Kamp irəli mövzuları əhatə edir. Müəllimlərin çoxunun təcrübəsinə görə, bu
-        mövzuları əla mənimsəmək RFO-nun finalında qızıl medal almaq üçün atılmalı önəmli addımdır.
-        Bütün müəllimlər bütün dərslərin hazırlanmasında kömək edir.
-        Sonda isə Kənan müəllimin köməyi ilə CMS platformasında bütün mövzular üzrə maraton yarışı keçiriləcək.
+        mövzuları əla mənimsəmək RFO-nun finalında qızıl medal almaq üçün atılmalı önəmli addımlardır.
+        Müəllimlərin hamısı bütün dərslərin hazırlanmasına kömək edir.
+        Sonda isə Kənan müəllimin köməyi ilə CMS platformasında bütün mövzuları əhatə edən marafon yarışı keçiriləcək.
       </p>
       <div class="overflow-x-auto mt-4">
         <table class="min-w-full bg-slate-300">
@@ -126,7 +126,7 @@
     { label: 'Ev tapşırığı üzərində çalışma günü', date: 'Fevral 6', teacher: '' },
     { label: '9. Spanning Tree (Kruskal, Union-Find)', date: 'Fevral 7, ç.', teacher: 'Saleh İsayev' },
     { label: 'Ev tapşırığı üzərində çalışma günləri', date: 'Fevral 8-9-10', teacher: '' },
-    { label: '10. Maraton Yarışı', date: 'Fevral 11, b. (saat 10:00-22:00)', teacher: 'Kənan Əsgərov' },
+    { label: '10. Marafon Yarışı', date: 'Fevral 11, b. (saat 10:00-22:00)', teacher: 'Kənan Əsgərli' },
   ];
 
 
