Add Binary Search lesson

--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -101,7 +101,8 @@
     </section>
     <section class="mt-4" id="classes">
       <h2 class="text-2xl">Dərslərin qeydləri və materialları</h2>
-      <p>Daha sonra yerləşdiriləcək.</p>
+      <p>Ev tapşırıqları <a href="https://vjudge.net/group/kamp2024" target="_blank" rel="noopener noreferrer">https://vjudge.net/group/kamp2024</a> keçidində yerləşir. VJudge saytında qeydiyyat edin və qrupa "Join Now" düyməsi ilə daxil olun.</p>
+      
     </section>
   </main>
 </body>
