--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -124,7 +124,7 @@
     { label: '2. String Hashing', date: 'Yanvar 24, ç.', teacher: 'Barış Namazov' },
     { label: 'Ev tapşırığı üzərində çalışma günü', date: 'Yanvar 25', teacher: '' },
     { label: '3. Bit ilə həll olan məsələlər, Trie strukturu', date: 'Yanvar 26, c.', teacher: 'Barış Namazov' },
-    { label: '4. Bitmask və Meet in the Middle', date: 'Yanvar 27, b.', teacher: 'Əziz Hüseynov' },
+    { label: '4. Bitmask və Meet in the Middle', date: 'Yanvar 27, ş.', teacher: 'Əziz Hüseynov' },
     { label: 'Ev tapşırığı üzərində çalışma günləri', date: 'Yanvar 28-29', teacher: '' },
     { label: '5. Segment Tree və aid məsələlər', date: 'Yanvar 30, ç.ə.', teacher: 'İbrahim Tağızadə' },
     { label: '6. Lazy Propagation, Dynamic Segment Tree və aid məsələlər', date: 'Yanvar 31, ç.', teacher: 'İbrahim Tağızadə' },
