--- a/kamp2024/binarysearch/index.html
+++ b/kamp2024/binarysearch/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TED Bilik Kursları</title>
+  <title>İnformatika Qış Kampı 2024</title>
   <link rel="stylesheet" href="/dist/styles.css" />
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@0;1&display=swap");
