--- a/kamp2024/hashing/index.html
+++ b/kamp2024/hashing/index.html
@@ -101,7 +101,10 @@
     </header>
     <section class="mt-6 no-print">
       <h2 class="text-2xl">Dərsin videosu</h2>
-      <p>Yüklənəcək.</p>
+      <iframe class="my-4" width="100%" height="400px" src="https://www.youtube.com/embed/MWeyuB8b_no"
+        title="İnformatika Qış Kampı 2024: Binary Search (Dərs 1)" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
     </section>
     <section class="mt-6">
       <header class="flex items-center justify-between">
