--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -143,7 +143,8 @@
 
   const lessons = [
     { url: 'binarysearch', name: 'Dərs 1: Binary Search', description: "Monotonluq günü xilas edir!" },
-    { url: 'hashing', name: 'Dərs 2: String Kodlaması', description: "Stringləri ədəd kimi ifadə etməyin ağıllı yolu." }
+    { url: 'hashing', name: 'Dərs 2: String Kodlaması', description: "Stringləri ədəd kimi ifadə etməyin ağıllı yolu." },
+    { url: 'bit', name: "Dərs 3: Bit əməlləri və Trie strukturu", description: "Təkcə kompüterlər ikilik say sistemində fikirləşməli deyillər."}
   ];
 
   const lessonTemplate = (url, name, description) => `
