--- a/kamp2024/bit/index.html
+++ b/kamp2024/bit/index.html
@@ -101,7 +101,10 @@
     </header>
     <section class="mt-6 no-print">
       <h2 class="text-2xl">Dərsin videosu</h2>
-      <p>Yüklənəcək.</p>
+      <iframe class="my-4" width="100%" height="400px" src="https://www.youtube.com/embed/4ok7dlMjS0U"
+        title="İnformatika Qış Kampı 2024: Bitlər ilə həll olan məsələlər və Trie strukturu  (Dərs 3)" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
     </section>
     <section class="mt-6">
       <header class="flex items-center justify-between">
@@ -222,8 +225,8 @@ void add(int x) {
             manipulation</a></li>
         <li><a href="https://www.hackerearth.com/practice/notes/lalitkundu95/tutorial-on-trie-and-example-problems/"
             target="_blank">Tutorial on Trie and example problems</a></li>
-        <li><a href="https://mamnoonsiam.github.io/cp-classes/week-10/overview"
-            target="_blank">mamnoonsiam: Trie</a></li>
+        <li><a href="https://mamnoonsiam.github.io/cp-classes/week-10/overview" target="_blank">mamnoonsiam: Trie</a>
+        </li>
       </ul>
     </section>
     <section class="mt-6 no-print" id="homework">
