--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -145,7 +145,10 @@
     { url: 'binarysearch', name: 'Dərs 1: Binary Search', description: "Monotonluq günü xilas edir!" },
     { url: 'hashing', name: 'Dərs 2: String Kodlaması', description: "Stringləri ədəd kimi ifadə etməyin ağıllı yolu." },
     { url: 'bit', name: "Dərs 3: Bit əməlləri və Trie strukturu", description: "Təkcə kompüterlər ikilik say sistemində fikirləşməli deyillər."},
-    { url: 'bitmask', name: "Dərs 4: Bitmask və Meet-in-the-Middle", description: "Bütün çoxluqlar üzərində əməllər və axtarış."}
+    { url: 'bitmask', name: "Dərs 4: Bitmask və Meet-in-the-Middle", description: "Bütün çoxluqlar üzərində əməllər və axtarış."},
+    { url: 'segtree', name: "Dərs 5-6:Segment tree ", description: "Aralıq axtarışlarını sürətli etmək üçün Ağac formalı sturktur."},
+    { url: 'paths', name: "Dərs 7:təpələr arası ən qısa məsafə", description: "Təpələr arasındakı ən qısa məsafəni necə tapmalı."},
+    { url: 'treedp', name: "Dərs 8: Ağacşəkilli strukturlarda Dinamik Proqramlaşdırma(DP)", description: "Ağacşəkilli strukturlarda ."}
   ];
 
   const lessonTemplate = (url, name, description) => `
