--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -96,7 +96,7 @@
             <tr>
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Mövzu</th>
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Tarix</th>
-              <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Müəllim</th>
+              <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Müəllim</th>FF
             </tr>
           </thead>
           <tbody class="text-gray-700" id="schedule">
@@ -146,9 +146,9 @@
     { url: 'hashing', name: 'Dərs 2: String Kodlaması', description: "Stringləri ədəd kimi ifadə etməyin ağıllı yolu." },
     { url: 'bit', name: "Dərs 3: Bit əməlləri və Trie strukturu", description: "Təkcə kompüterlər ikilik say sistemində fikirləşməli deyillər."},
     { url: 'bitmask', name: "Dərs 4: Bitmask və Meet-in-the-Middle", description: "Bütün çoxluqlar üzərində əməllər və axtarış."},
-    { url: 'segtree', name: "Dərs 5-6:Segment tree ", description: "Aralıq axtarışlarını sürətli etmək üçün Ağac formalı sturktur."},
-    { url: 'paths', name: "Dərs 7:təpələr arası ən qısa məsafə", description: "Təpələr arasındakı ən qısa məsafəni necə tapmalı."},
-    { url: 'treedp', name: "Dərs 8: Ağacşəkilli strukturlarda Dinamik Proqramlaşdırma(DP)", description: "Ağacşəkilli strukturlarda ."}
+    { url: 'segtree', name: "Dərs 5-6: Segment tree", description: "Aralıq axtarışlarını sürətli etmək üçün Ağac formalı sturktur."},
+    { url: 'paths', name: "Dərs 7: Qısa Yollar", description: "Təpələr arasındakı ən qısa məsafəni necə tapmalı."},
+    { url: 'treedp', name: "Dərs 8: Ağac DP", description: "Ağacşəkilli strukturlarda DP."}
   ];
 
   const lessonTemplate = (url, name, description) => `
