--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -96,7 +96,7 @@
             <tr>
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Mövzu</th>
               <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Tarix</th>
-              <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Müəllim</th>FF
+              <th class="text-left py-3 px-4 uppercase font-semibold text-sm">Müəllim</th>
             </tr>
           </thead>
           <tbody class="text-gray-700" id="schedule">
