--- a/kamp2024/paths/index.html
+++ b/kamp2024/paths/index.html
@@ -95,7 +95,7 @@
         </svg>
         <span>Geri qayıt</span></a>
       <h1 class="flex justify-center text-3xl">
-        Dərs 7:təpələr arası ən qısa məsafə
+        Dərs 7: Qısa Yollar
       </h1>
       <h2>Müəllim: Emin Orucov</h2>
     </header>
