--- a/kamp2024/treedp/index.html
+++ b/kamp2024/treedp/index.html
@@ -95,7 +95,7 @@
         </svg>
         <span>Geri qayıt</span></a>
       <h1 class="flex justify-center text-3xl">
-        Dərs 8: Ağacşəkilli strukturlarda Dinamik Proqramlaşdırma(DP)
+        Dərs 8: Ağac DP
       </h1>
       <h2>Müəllim: Rəşad Məmmədov</h2>
     </header>
