--- a/kamp2024/segtree/index.html
+++ b/kamp2024/segtree/index.html
@@ -118,7 +118,7 @@
           Qeydləri çap et
         </button>
       </header>
-      <h3 class="text-xl mt-2 font-bold">Hələ yoxdur yaza bilərsən.</h3>
+      <h3 class="text-xl mt-2 font-bold">Hələ yoxdur.</h3>
 
     </section>
     <section class="mt-6">
