Add registration form

--- a/kamp2024/index.html
+++ b/kamp2024/index.html
@@ -41,6 +41,7 @@
           <p>Piazza qeydiyyat linki: <a href="https://piazza.com/informatika_olimpiadalar_mktbi/winter2024/w2024"
               target="_blank"
               rel="noopener noreferrer">https://piazza.com/informatika_olimpiadalar_mktbi/winter2024/w2024</a></p>
+          <p>Marafon yarışı üçün qeydiyyat linki <a href="https://forms.gle/D12xjsLCkjnPkxKJ6" target="_blank" rel="noopener noreferrer">https://forms.gle/D12xjsLCkjnPkxKJ6</a></p>
         </div>
       </div>
     </section>
